// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsxFactory should create correct Prop element 1`] = `
{
  "actualValue": "actual value",
  "comparator": "=",
  "contentType": "inline",
  "expectedValue": [
    {
      "type": "text",
      "value": "expected value",
    },
  ],
  "name": [
    {
      "type": "text",
      "value": "prop name",
    },
  ],
  "status": "success",
  "type": "prop",
}
`;

exports[`jsxFactory should create correct Prop element 2`] = `
{
  "comparator": undefined,
  "contentType": "block",
  "expectedValue": {
    "language": "javascript",
    "type": "code-block",
    "value": "expected value",
  },
  "name": [
    {
      "type": "text",
      "value": "prop name",
    },
  ],
  "status": "fail",
  "type": "prop",
}
`;

exports[`jsxFactory should create correct Props element 1`] = `
{
  "children": [
    {
      "actualValue": undefined,
      "comparator": undefined,
      "contentType": "inline",
      "expectedValue": [
        {
          "type": "text",
          "value": "test",
        },
      ],
      "name": [
        {
          "type": "text",
          "value": "test",
        },
      ],
      "status": undefined,
      "type": "prop",
    },
  ],
  "type": "props",
}
`;

exports[`jsxFactory should translate link correctly 1`] = `
{
  "href": "http://some.url",
  "type": "link",
  "value": "link to some url",
}
`;

exports[`jsxFactory should translate test line result line correctly 1`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Some title",
        },
      ],
      "type": "test-line",
    },
  ],
  "docs": undefined,
  "message": [
    {
      "type": "text",
      "value": "Some text",
    },
  ],
  "screenshot": undefined,
  "status": "fail",
  "type": "test-line-result",
}
`;

exports[`jsxFactory should translate test line result line correctly 2`] = `
{
  "children": [
    {
      "children": [],
      "title": [
        {
          "type": "text",
          "value": "Some title",
        },
      ],
      "type": "test-line",
    },
  ],
  "docs": "//link/to/docs",
  "message": [
    {
      "type": "text",
      "value": "Some text",
    },
  ],
  "screenshot": "some/path/to/screenshot.png",
  "status": "fail",
  "type": "test-line-result",
}
`;
